--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-         <h1>Lion Tutoring</h1>
+        <div class="page-container">
+            <div class="sidebar"></div>
+            <div class="content"></div>
+        </div>
     </body>
 </html>
+
