--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                             <li><a class="subject-link" href="#" onclick=switchPage(pages.CS)>AP Computer Science</a></li>
                             <li><a class="subject-link" href="#" onclick=switchPage(pages.MATH)>AP BC Calculus</a></li>
                             <li><a class="subject-link" href="#" onclick=switchPage(pages.PHYSICS)>AP Physics</a></li>
+                            <li><a class="subject-link" href="#" onclick=switchPage(pages.ABOUT)>About</a></li>
                         </ul>
                     </div>
                     
@@ -28,7 +29,7 @@
                         <div class="contact-items">
                             <p>📧 sunkam.sai@gmail.com</p>
                             <p>📞 6513879383</p>
-                            <p>⏰ Sun-Thu: 5PM-9PM (Eastern)</p>
+                            <p>⏰ Sun-Thu: 5PM-9PM (NYC time)</p>
                             <p>$65/hr or $105/2hr</p>
                         </div>
                         <button class="sidebar-cta">Schedule Session</button>
@@ -46,19 +47,33 @@
 
 <!-- Individual page content -->
 
-<div id="home">
-    <h1>Welcome to Your Learning Journey</h1>
-    <p>Content area for your tutoring services and information.</p>
-</div>
 <div id="math">
     <h1>AP Calculus Tutoring</h1>
     <p>Details about AP Calculus tutoring sessions.</p>
 </div>
+
 <div id="physics">
     <h1>AP Physics tutoring</h1>
     <p>Details about AP Physics tutoring sessions.</p>
 </div>
+
 <div id="cs">
     <h1>AP Computer Science Tutoring</h1>
     <p>Details about AP Computer Science tutoring sessions.</p>
+</div>
+
+<div id="about">
+    <h1>About Me</h1>
+    <p>I have been tutoring high school (since 2014) and college (since 2017) students in computer science, math, and physics.</p>
+    <p>Work Experience</p>
+    <ul>
+        <li>Software Engineer at Google (2022-Present)</li>
+        <li>Software Engineer at Microsoft (2020-2022)</li>
+    </ul>
+    <p>Education</p>
+    <ul>
+        <li>B.S. Computer Science, University of Minnesota (2014-2017)</li>
+        <li>B.S. Mathematics, University of Minnesota (2014-2017)</li>
+        <li>M.S. Computer Science, University of Southern California (2018-2020)</li>
+    </ul>   
 </div>
