add calendly link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <p>⏰ Sun-Thu: 5PM-9PM (NYC time)</p>
                             <p>$65/hr or $105/2hr</p>
                         </div>
-                        <button class="sidebar-cta">Schedule Session</button>
+                        <button class="sidebar-cta" onclick=scheduleLink()>Schedule Session</button>
                     </div>
                 </div>
             </aside>
