--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 <!-- Individual page content -->
 
 <div id="math">
-    <h1>AP Calculus Tutoring</h1>
+    <h1>AP Calculus</h1>
     <p>Details about AP Calculus tutoring sessions.</p>
 </div>
 
 <div id="physics">
-    <h1>AP Physics tutoring</h1>
+    <h1>AP Physics</h1>
     <p>Details about AP Physics tutoring sessions.</p>
 </div>
 
 <div id="cs">
-    <h1>AP Computer Science Tutoring</h1>
+    <h1>AP Computer Science</h1>
     <p>Details about AP Computer Science tutoring sessions.</p>
 </div>
 
