--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <p class="description-text">I am a private tutor for advanced high school and college students. I specialize in computer science, math, and physics.</p>
                         <ul>
                             <li><a class="subject-link" href="#" onclick=switchPage(pages.CS)>AP Computer Science</a></li>
-                            <li><a class="subject-link" href="#" onclick=switchPage(pages.MATH)>AP BC Calculus</a></li>
+                            <li><a class="subject-link" href="#" onclick=switchPage(pages.MATH)>AP Calculus</a></li>
                             <li><a class="subject-link" href="#" onclick=switchPage(pages.PHYSICS)>AP Physics</a></li>
                             <li><a class="subject-link" href="#" onclick=switchPage(pages.ABOUT)>About</a></li>
                         </ul>
